--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -20,10 +20,8 @@ jobs:
       run: dotnet restore
       
     - name: Build package
-      run: dotnet build DemoCICD.csproj --configuration Release --no-restore
-      working-directory: ./DemoCICD
+      run: dotnet build DemoCICD.sln --configuration Release --no-restore
       
     - name: Run unit test
-      run: dotnet test DemoCICD.csproj --configuration release --no-build --verbosity normal
-      working-directory: ./DemoCICD
+      run: dotnet test DemoCICD.sln --configuration release --no-build --verbosity normal
       
