--- a/.github/workflows/cd-publish.yml
+++ b/.github/workflows/cd-publish.yml
@@ -36,7 +36,7 @@ jobs:
       working-directory: ./DemoCICD
     
     - name: Publish generated package to Nuget registry
-      run: dotnet nuget push **/*.nupkg  --source "https://api.nuget.org/v3/index.json" --api-key ${{ secrects.NUGET_API_KEY }} --skip-duplicate
+      run: dotnet nuget push **/*.nupkg  --source "https://api.nuget.org/v3/index.json" --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
       
     - name: Publish generated package to GitHub registry
-      run: dotnet nuget push **/*.nupkg  --source "https://nuget.pkg.github.com/princ3od/index.json" --api-key ${{ secrects.GITHUB_TOKEN }} --skip-duplicate
+      run: dotnet nuget push **/*.nupkg  --source "https://nuget.pkg.github.com/princ3od/index.json" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
